--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="./dist/main.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Custom Modal</title>
 </head>
 <body>
 <div class="wrapper">
@@ -20,9 +20,12 @@
         <div class="_container">
             <p>Класс модального окна позволяет быстро прикрутить скрипт модального окна(сколько угодно окон) к Вашему сайту</p>
             <p>Также с помощью callback - функций возможно гибко настраивать открытие других модальных окон (окно благодарности например) и их закрытие через таймер</p>
-            <p>Для получения экземпляра модального окна реализована статическая функция modalGetInstance, которая в замыкании хранит массив со всеми объектами модалок</p>
-            <p>Это дает нам контроль, и не позволяет создавать дубли объектов, соответственно не навешивая новых событий на кнопки</p>
+            <p>Для получения экземпляра модального окна реализована статическая функция modalGetInstance, которая в замыкании хранит массив со всеми объектами модалок.</p>
+            <p>modalGetInstance - возвращает функцию, которая и импортируется в другие модули. Эта функция контролирует, если ли уже объект такой модалки или нет</p>
+            <p>Если есть, то возвращает его из замыкания, если нет, то создает новый</p>
+            <p>Это дает нам контроль, и не позволяет создавать дубли объектов,соответственно не навешивая новых событий на кнопки</p>
             <p>Ниже кнопки активации первой модалки с формой, если форму отправить, то выйдет окно со спасибками</p>
+            <p>Открытие окна со спасибками как раз передано в качестве callback</p>
             <button class="modal1-activator btn form-btn site-btn">Modal 1</button>
             <button class="modal1-activator btn form-btn site-btn">Modal 1</button>
             <button class="modal1-activator btn form-btn site-btn">Modal 1</button>
