Added an example of lazy usage

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <p>Класс предназначен в первую очередь для облегчения работы JS программиста</p>
             <p>Стили модалки, анимация открытия, закрытия - остаются на верстальщике, требуется передать лишь класс открытого модального окна</p>
             <p>Ниже кнопки для открытия второй модалки</p>
-            <button class="modal2-activator btn form-btn site-btn">Modal 2</button>
-            <button class="modal2-activator btn form-btn site-btn">Modal 2</button>
+            <button class="custom-modal-activator btn form-btn site-btn">Modal 2</button>
+            <button class="custom-modal-activator btn form-btn site-btn">Modal 2</button>
             <p>Класс расширяем по желанию, этим и хорошо ООП подход</p>
         </div>
     </main>
@@ -60,17 +60,12 @@
         <p>Мы скоро с Вами свяжемся</p>
     </div>
 </div>
-<div class="modal modal-dublicated">
-    <div class="modal-content">
-        <div class="modal-close">X</div>
+<div class="modal custom-modal">
+    <div class="modal-content custom-modal-content">
+        <div class="modal-close custom-modal-close">X</div>
         <p>Это просто дубль модалки для теста</p>
     </div>
 </div>
-<div class="modal modal-dublicated">
-    <div class="modal-content">
-        <div class="modal-close">X</div>
-        <p>Это просто дубль модалки для теста</p>
-    </div>
-</div>
+
 </body>
 </html>
