--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
             <p>modalGetInstance - возвращает функцию, которая и импортируется в другие модули. Эта функция контролирует, если ли уже объект такой модалки или нет</p>
             <p>Если есть, то возвращает его из замыкания, если нет, то создает новый</p>
             <p>Это дает нам контроль, и не позволяет создавать дубли объектов,соответственно не навешивая новых событий на кнопки</p>
-            <p>Ниже кнопки активации первой модалки с формой, если форму отправить, то выйдет окно со спасибками</p>
-            <p>Открытие окна со спасибками как раз передано в качестве callback</p>
+            <p>Ниже кнопки активации первой модалки с формой, если форму отправить, то выйдет окно со спасибками.</p>
+            <p>Открытие окна со спасибками как раз передано в качестве callback.</p>
             <button class="modal1-activator btn form-btn site-btn">Modal 1</button>
             <button class="modal1-activator btn form-btn site-btn">Modal 1</button>
             <button class="modal1-activator btn form-btn site-btn">Modal 1</button>
             <p>Класс предназначен в первую очередь для облегчения работы JS программиста</p>
             <p>Стили модалки, анимация открытия, закрытия - остаются на верстальщике, требуется передать лишь класс открытого модального окна</p>
-            <p>Ниже кнопки для открытия второй модалки</p>
+            <p>Ниже кнопки для открытия второй модалки.</p>
             <button class="custom-modal-activator btn form-btn site-btn">Modal 2</button>
             <button class="custom-modal-activator btn form-btn site-btn">Modal 2</button>
-            <p>Класс расширяем по желанию, этим и хорошо ООП подход</p>
+            <p>Класс расширяем по желанию, этим и хорошо ООП подход.</p>
         </div>
     </main>
     <footer class="footer">
